[package]
name = "vtcode"
version = "0.119.0"
edition = "2024"
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "A Rust-based terminal coding agent with modular architecture supporting multiple LLM providers"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode"
keywords = ["ai", "coding", "agent", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
exclude = [
    "target/",
    ".github/",
    "docs/**",
    "!docs/config/CONFIG_FIELD_REFERENCE.md",
    "scripts/",
    "screenshots/",
    "logs/",
    "prompts/",
    "dist/",
    "npm/",
    "vtcode-core/embedded_assets_source/",
    "resources/",
]
default-run = "vtcode"

[lints.clippy]
unwrap_used = "allow"
panic = "allow"
panic_in_result_fn = "allow"
unused_result_ok = "allow"
float_cmp = "allow"
unreachable = "allow"

[lints.rust]
unfulfilled_lint_expectations = "allow"

# Override sections to consolidate duplicate dependencies
[workspace.dependencies]
base64 = "0.22.1"
crossterm = "0.29"
schemars = "1.2"
thiserror = "2.0.18"
unicode-width = "0.2.0"
serde_json = "1.0"
tempfile = "3.27"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
num_cpus = "1.16"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
libc = "0.2"
rand = "0.10"
semver = "1.0"
fs2 = "0.4"
hashbrown = { version = "0.17", features = ["serde"] }
rustc-hash = "2.1"
keyring-core = "1"
libloading = "0.9"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
assert_fs = "1.1"
futures = "0.3"
once_cell = "1.21"
indexmap = { version = "2.13", features = ["serde"] }
async-trait = "0.1.89"
anstyle = "1.0"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
toml = "1.0.6"
sha2 = "0.11"
anstyle-git = "1.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
criterion = "0.8"
serde-saphyr = "0.0.27"
serial_test = "3.5"
dotenvy = "0.15"
dirs = "6.0"
anstyle-crossterm = "4.0"
path-clean = "1.0"
shell-words = "1.1"
dialoguer = "0.12.0"
walkdir = "2.5"
itertools = "0.14.0"
memchr = "2.8"
url = "2.5"
agent-client-protocol = { version = "=0.10.4", features = ["unstable_auth_methods"] }
uuid = "1.23.2"
ignore = "0.4"
ring = "0.17"
pretty_assertions = "1.4"

[workspace.package]
version = "0.119.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode"

[workspace]
resolver = "2"
members = [
    "vtcode-auth",
    "vtcode-acp",
    "vtcode-collaboration-tool-specs",
    "vtcode-core",
    "vtcode-utility-tool-specs",
    "vtcode-terminal-detection",
    "vtcode-ghostty-vt-sys",
    "vtcode-theme",
    "vtcode-tui",
    "vtcode-vim",
    "vtcode-commons",
    "vtcode-config",
    "vtcode-llm",
    "vtcode-lmstudio",
    "vtcode-markdown-store",
    "vtcode-indexer",
    "vtcode-tools",
    "vtcode-bash-runner",
    "vtcode-exec-events",
    "vtcode-file-search",
    "vtcode-process-hardening",
    "xtask",
]
default-members = [".", "vtcode-core", "vtcode-tui"]
exclude = ["zed-extension"]

[patch.crates-io]
vtcode-commons = { path = "vtcode-commons" }
vtcode-acp = { path = "vtcode-acp" }
vtcode-auth = { path = "vtcode-auth" }
vtcode-config = { path = "vtcode-config" }
vtcode-core = { path = "vtcode-core" }
vtcode-tui = { path = "vtcode-tui" }
vtcode-process-hardening = { path = "vtcode-process-hardening" }
vtcode-terminal-detection = { path = "vtcode-terminal-detection" }
vtcode-markdown-store = { path = "vtcode-markdown-store" }
vtcode-indexer = { path = "vtcode-indexer" }
vtcode-bash-runner = { path = "vtcode-bash-runner" }
vtcode-exec-events = { path = "vtcode-exec-events" }
vtcode-file-search = { path = "vtcode-file-search" }
vtcode-ghostty-vt-sys = { path = "vtcode-ghostty-vt-sys" }

[workspace.lints]
# Rust compiler lints
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_qualifications = "warn"
rust.unused_results = "allow"  # Too verbose for development
rust.trivial_numeric_casts = "warn"
rust.unsafe_code = "warn"
rust.unstable_features = "warn"

[workspace.lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
# Note: string_slice and indexing_slicing are phased in; high-noise on existing codebase.
string_slice = "allow"  # TODO: Phase in after cleanup pass
indexing_slicing = "allow"  # TODO: Phase in after cleanup pass
unwrap_used = "allow"
panic = "allow"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "allow"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "allow"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "allow"  # TODO: Audit intentional drops (mostly safe write! calls & cleanup)
unused_result_ok = "allow"
map_err_ignore = "warn"
assertions_on_result_states = "allow"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
# Integer overflow in Rust: arithmetic panics in debug, wraps as two's complement in release.
# Prefer checked_*, saturating_*, wrapping_* methods over raw arithmetic when overflow is
# a concern. Performance intuition: overflow checking is near-zero cost with proper compiler
# optimization — range analysis eliminates unnecessary checks, and late lowering avoids
# inhibiting optimizations (see docs/development/rust-performance-principles.md).
# See https://huonw.github.io/blog/2016/04/myths-and-legends-about-integer-overflow-in-rust/
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_truncation = "allow"  # TODO: Phase in after overflow audit
cast_possible_wrap = "allow"  # TODO: Phase in after overflow audit

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints
# Note: These require manual curation of all existing suppressions.
allow_attributes = "allow"  # TODO: Phase in after suppression audit
allow_attributes_without_reason = "allow"  # TODO: Phase in after suppression audit


[dependencies]
vtcode-acp = { path = "vtcode-acp", version = "0.119.0" }
vtcode-commons = { path = "vtcode-commons", version = "0.119.0" }
vtcode-config = { path = "vtcode-config", version = "0.119.0" }
vtcode-auth = { path = "vtcode-auth", version = "0.119.0" }
vtcode-core = { path = "vtcode-core", version = "0.119.0", default-features = false }
vtcode-process-hardening = { path = "vtcode-process-hardening", version = "0.119.0" }
vtcode-terminal-detection = { path = "vtcode-terminal-detection", version = "0.119.0" }
vtcode-tui = { path = "vtcode-tui", version = "0.119.0" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
webbrowser = "1.0"
notify = "6.1.1" # For file watching functionality
tokio-util = { workspace = true, features = ["compat"] }
serde = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
walkdir = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true } # For timestamp handling in CLI
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }
async-stream = "0.3"
# Home directory detection
dirs = { workspace = true }
# Hashing for large output file paths
sha2 = { workspace = true }
# ANSI styling
anstyle = { workspace = true }
colorchoice = "1.0"
shell-words = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
hashbrown = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
smallvec = "1.13"
self_update = { version = "0.43", default-features = false, features = ["archive-tar", "compression-flate2", "rustls", "reqwest"] }
reqwest = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8" }
serde-saphyr = { workspace = true }
mimalloc = { version = "0.1", default-features = false }

[features]
default = ["tool-chat", "a2a-server", "desktop-notifications"]
tool-chat = []
profiling = []
anthropic-api = ["vtcode-core/anthropic-api"]
a2a-server = ["vtcode-core/a2a-server"]   # Enable OAuth callback server for provider authentication
desktop-notifications = ["vtcode-core/desktop-notifications"]

[profile.dev]
debug = 0
lto = false
# incremental = false required for sccache; set CARGO_INCREMENTAL=1 to override for rapid iteration
incremental = false
opt-level = 0
# Split debuginfo for faster incremental builds (when CARGO_INCREMENTAL=1)
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
# Explicitly enable overflow checks during tests to catch bugs early.
overflow-checks = true

# Optimize build dependencies for faster proc-macro execution
[profile.dev.build-override]
opt-level = 3
codegen-units = 16

# Optimize dependencies slightly (they're cached anyway)
[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.dev-optimized]
inherits = "dev"
lto = "thin"
codegen-units = 1
opt-level = 2

# Fast release profile - thin LTO for ~50% faster builds than full LTO
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization for better performance and size reduction.
opt-level = 3     # Optimize for performance on M4 (was "s" for size)
strip = true      # Ensures debug symbols are removed.
panic = "abort"   # Reduce size of panic paths.
# Additional performance optimizations:
incremental = false # Disable incremental compilation for better optimization

# CI-specific profile for faster builds with minimal debug info
[profile.ci]
inherits = "dev"
# Copy settings from dev profile but with minimal debug info
debug = 0
incremental = false
overflow-checks = false

[profile.bench]
# Optimize benchmarks for accurate performance measurement
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false

# Profile for bloaty analysis - optimized but with debug info
[profile.bloaty]
inherits = "release"
debug = true
strip = false



[[bin]]
name = "vtcode"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
indexmap = { workspace = true }
rand = "0.9"
regex = { workspace = true }
assert_cmd = "2.1"
predicates = "3.1"
insta = "1.39"
serial_test = { workspace = true }
agent-client-protocol = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anstyle-crossterm"]

[package.metadata.unmaintained]
# Ignore known unmaintained packages (add packages as needed)
# Example: ignore = ["some-crate"]
ignore = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
