[package]
name = "vtcode-acp-client"
version = "0.84.1"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "ACP client implementation for inter-agent communication and orchestration"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
homepage = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-acp-client"
categories = ["api-bindings", "network-programming", "text-editors"]
keywords = ["vtcode", "acp", "agent", "client-connection", "vt"]

[dependencies]
agent-client-protocol = "0.9.3"
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
