[package]
name = "vtcode-acp-client"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "ACP client implementation for inter-agent communication and orchestration"
license.workspace = true
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
homepage = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-acp-client"
categories = ["api-bindings", "network-programming", "text-editors"]
keywords = ["vtcode", "acp", "agent", "client-connection", "vt"]

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
futures-util = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
