[package]
name = "vtcode-acp"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "ACP bridge and client implementation for VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-acp"
keywords = ["vtcode", "acp", "zed", "agent", "bridge"]
categories = ["api-bindings", "development-tools", "text-editors"]

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
hashbrown = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
percent-encoding = "2.3"
vtcode-core = { path = "../vtcode-core", version = "0.98.3" }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
