[package]
name = "vtcode-bash-runner"
version = "0.83.0"
edition = "2024"
description = "Cross-platform shell execution helpers extracted from VT Code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-bash-runner"
categories = ["development-tools", "command-line-utilities"]
keywords = ["vtcode", "vt", "cross-platform", "shell", "bash-runner"]

[features]
default = ["std-process", "powershell-process"]
std-process = []
powershell-process = []
dry-run = []
pure-rust = []
serde-errors = ["dep:serde"]
exec-events = ["dep:vtcode-exec-events"]

[dependencies]
anyhow = "1.0"
lru = "0.16"
parking_lot = "0.12"
path-clean = "1.0"
shell-escape = "0.1"
tokio = { version = "1.49", features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "process",
    "time",
    "rt-multi-thread",
] }
vtcode-commons = { path = "../vtcode-commons", version = "0.83.0" }
serde = { version = "1.0", features = ["derive"], optional = true }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.83.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "winnt",
    "handleapi",
] }

[lints]
workspace = true

[dev-dependencies]
assert_fs = "1.1"
tokio-test = "0.4"

[[example]]
name = "dry_run"
required-features = ["dry-run"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
