[package]
name = "vtcode-bash-runner"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
description = "Cross-platform shell execution helpers extracted from VT Code"
license.workspace = true
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-bash-runner"
categories = ["development-tools", "command-line-utilities"]
keywords = ["vtcode", "vt", "cross-platform", "shell", "bash-runner"]

[features]
default = ["std-process", "powershell-process"]
std-process = []
powershell-process = []
dry-run = []
pure-rust = []
serde-errors = ["dep:serde"]
exec-events = ["dep:vtcode-exec-events"]

[dependencies]
anyhow = { workspace = true }
bytes = "1.11"
hashbrown = { workspace = true }
lru = "0.16"
parking_lot = "0.12"
path-clean = { workspace = true }
shell-escape = "0.1"
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "process",
    "time",
    "rt-multi-thread",
] }
vtcode-commons = { path = "../vtcode-commons", version = "0.86.11" }
serde = { workspace = true, features = ["derive"], optional = true }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.86.11", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", features = ["user", "signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "winnt",
    "handleapi",
] }

[lints]
workspace = true

[dev-dependencies]
assert_fs = { workspace = true }
tokio-test = "0.4"

[[example]]
name = "dry_run"
required-features = ["dry-run"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
