[package]
name = "vtcode-bash-runner"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
description = "Cross-platform shell execution helpers extracted from VT Code"
license.workspace = true
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-bash-runner"
categories = ["development-tools", "command-line-utilities"]
keywords = ["vtcode", "vt", "cross-platform", "shell", "bash-runner"]

[features]
default = ["std-process", "powershell-process"]
std-process = []
powershell-process = []
dry-run = []
pure-rust = []
serde-errors = ["dep:serde"]
exec-events = ["dep:vtcode-exec-events"]

[dependencies]
anyhow = { workspace = true }
bytes = "1.11"
hashbrown = { workspace = true }
lru = "0.18"
parking_lot = "0.12"
path-clean = { workspace = true }
shell-escape = "0.1"
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "process",
    "time",
    "rt-multi-thread",
] }
vtcode-commons = { path = "../vtcode-commons", version = "0.116.3" }
serde = { workspace = true, features = ["derive"], optional = true }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.116.3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", features = ["user", "signal", "process"] }

[lib]
doctest = false

[lints.clippy]
unwrap_used = "allow"
panic = "allow"
panic_in_result_fn = "allow"
unused_result_ok = "allow"
float_cmp = "allow"
unreachable = "allow"
assertions_on_result_states = "allow"

[lints.rust]
unfulfilled_lint_expectations = "allow"


[dev-dependencies]
assert_fs = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tokio-test", "winapi"]

[[example]]
name = "dry_run"
required-features = ["dry-run"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

