[package]
name = "vtcode-collaboration-tool-specs"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Passive JSON schemas for VT Code collaboration and HITL tools"
license.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
