[package]
name = "vtcode-collaboration-tool-specs"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Passive JSON schemas for VT Code collaboration and HITL tools"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-collaboration-tool-specs"
license.workspace = true
publish = true

[dependencies]
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
