[package]
name = "vtcode-commons"
version = "0.42.19"
edition = "2021"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Shared traits for paths, telemetry, and error reporting reused across VTCode component extractions"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-commons"
categories = ["development-tools", "command-line-interface"]
keywords = ["vt", "commons", "traits", "utilities", "error-handling"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = []

[dependencies]
anyhow = "1"
