[package]
name = "vtcode-commons"
version = "0.84.1"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Shared traits for paths, telemetry, and error reporting reused across VT Code component extractions"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-commons"
categories = ["development-tools", "command-line-interface"]
keywords = ["vt", "commons", "traits", "utilities", "error-handling"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = []

[dependencies]
anyhow = "1"
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.48", features = ["fs", "io-util"] }
tracing = "0.1"
anstyle = "1.0"
anstyle-query = "1.0"
anstyle-crossterm = "4.0"
futures = "0.3"
base64 = { workspace = true }
glob = "0.3"
once_cell = "1.19"
sha2 = "0.10"
thiserror = { workspace = true }
regex = { workspace = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "rt"] }
