[package]
name = "vtcode-commons"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Shared traits for paths, telemetry, and error reporting reused across VT Code component extractions"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-commons"
categories = ["development-tools", "command-line-interface"]
keywords = ["vt", "commons", "traits", "utilities", "error-handling"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]


[features]
tui = ["dep:ratatui"]
default = ["tui"]

[dependencies]
anyhow = { workspace = true }
hashbrown = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
anstyle = { workspace = true }
anstyle-query = "1.0"
anstyle-crossterm = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
glob = "0.3"
once_cell = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
ratatui = { workspace = true, optional = true }
left-right = "0.11.7"
memchr = { workspace = true }
send_wrapper = "0.6.0"
unicode-width = { workspace = true }
url = { workspace = true }
percent-encoding = "2.3"

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

[lints]
workspace = true
