[package]
name = "vtcode-config"
version = "0.84.0"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Config loader components shared across VT Code and downstream adopters"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-config"
keywords = ["config", "vtcode", "agent", "bootstrap"]
categories = ["config", "development-tools"]


[dependencies]
anyhow = "1.0"
base64 = { workspace = true }
dirs = "6.0"
directories = "6.0"
hostname = "0.4"
indexmap = { version = "2.13", features = ["serde"] }
keyring = { workspace = true }
once_cell = "1.19"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.9.11"
toml_edit = "0.24.0"
tracing = "0.1"
urlencoding = "2.1"
vtcode-commons = { path = "../vtcode-commons", version = "0.84.0" }
dotenvy = "0.15"
schemars = { workspace = true, optional = true, features = ["indexmap2"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }


[features]
default = ["bootstrap"]
bootstrap = []
schema = ["dep:schemars"]

[dev-dependencies]
tempfile = "3.24"
assert_fs = "1.1"
serial_test = "3.3"

[build-dependencies]
anyhow = "1.0"
indexmap = { version = "2.13", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
