[package]
name = "vtcode-config"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Config loader components shared across VT Code and downstream adopters"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-config"
keywords = ["config", "vtcode", "agent", "bootstrap"]
categories = ["config", "development-tools"]


[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hashbrown = { workspace = true }
dirs = { workspace = true }
directories = "6.0"
hostname = "0.4"
indexmap = { workspace = true }
keyring = { workspace = true }
notify = "6.1.1"
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
toml_edit = "0.24.0"
tracing = { workspace = true }
urlencoding = "2.1"
vtcode-commons = { path = "../vtcode-commons", version = "0.91.1" }
vtcode-auth = { path = "../vtcode-auth", version = "0.91.1" }
dotenvy = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
schemars = { workspace = true, optional = true, features = ["indexmap2"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }


[features]
default = ["bootstrap"]
bootstrap = []
schema = ["dep:schemars", "vtcode-auth/schema"]

[dev-dependencies]
assert_fs = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
