[package]
name = "vtcode-core"
version = "0.84.1"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Core library for VT Code - a Rust-based terminal coding agent"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-core"
keywords = ["ai", "coding", "agent", "llm", "rust"]
categories = ["development-tools", "api-bindings"]
include = [
    "src/",
    "tests/",
    "examples/",
    "benches/",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "embedded_assets_source/",
    "templates/",
]
[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = "1.3"
toml = "0.9.11"
toml_edit = "0.24"
tokio = { version = "1.49", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
tokio-util = { version = "0.7", features = ["codec"] }
async-process = "2.2"
futures = "0.3"
futures-lite = "2.3"
async-stream = "0.3"
base64 = { workspace = true }
walkdir = "2.5"
glob = "0.3"
thiserror = { workspace = true }
dialoguer = "0.12.0"
regex = { workspace = true }
shell-words = "1.1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
indexmap = { version = "2.13", features = ["serde"] }
itertools = "0.14.0"
tempfile = { workspace = true }
dunce = "1.0"
include_dir = "0.7"
once_cell = "1.19"
parking_lot = "0.12"
sha2 = "0.10"
lru = "0.16"
num_cpus = { workspace = true }
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
iana-time-zone = "0.1"
humantime = "2.1"
terminal_size = "0.4.3"
async-trait = "0.1.89"
bytes = "1.10"
# Dotenv support
dotenvy = "0.15"
# Home directory detection
dirs = "6.0"
# YAML support
serde_yaml = "0.9"
# Zip support for skill packaging
zip = { version = "7.2", default-features = false, features = ["deflate"] }
# Semantic versioning for Ollama version detection (Codex pattern)
semver = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
fs2 = { workspace = true }
# ANSI styling
anstyle = "1.0"
anstyle-git = "1.1"
anstyle-ls = "1.0"
anstyle-crossterm = "4.0"
anstyle-query = "1.0"
anstream = "0.6"
colorchoice-clap = "1.0"
quick_cache = "0.6"
roff = "0.2"
unicode-segmentation = "1.11"
unicode-width = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
nix = { version = "0.31", features = ["user", "signal"] }
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tui-popup = "0.7"
better-panic = "0.3"

perg = "0.8.0"
nucleo-matcher = "0.3"
line-clipping = "0.3"
vtcode-file-search = { version = "0.84.1", path = "../vtcode-file-search" }
tui-shimmer = "0.1.2"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "simd",
] }
catppuccin = { version = "2.5", default-features = false }
rig = { package = "rig-core", version = "0.23.1", default-features = false, features = [
    "reqwest-rustls",
] }
vt100 = "0.15.2"
portable-pty = "0.9.0"
ansi-to-tui = "8.0.1"
vtcode-commons = { path = "../vtcode-commons", version = "0.84.1" }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.84.1" }
vtcode-config = { path = "../vtcode-config", version = "0.84.1" }
vtcode-tui = { path = "../vtcode-tui", version = "0.84.1" }
vtcode-markdown-store = { path = "../vtcode-markdown-store", version = "0.84.1" }
vtcode-indexer = { path = "../vtcode-indexer", version = "0.84.1" }
vtcode-bash-runner = { path = "../vtcode-bash-runner", version = "0.84.1" }
vtcode-acp-client = { path = "../vtcode-acp-client", version = "0.84.1" }

# Schema generation
schemars = { workspace = true, optional = true }

# MCP (Model Context Protocol) support
# Phase 1: Upgrade to 0.9.0+ for improved transport and lifecycle management
rmcp = { version = "0.14", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
openai-harmony = "0.0.8"
url = "2.5"
jsonschema = "0.40"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "serde"] }
which = "8.0.0"
textwrap = "0.16"
editor-command = "2.0"
signal-hook = "0.4"
rand = "0.9"
rustc-hash = { workspace = true }

lsp-types = "0.97.0"
notify-rust = { version = "4.11", optional = true }
ring = "0.17"

# A2A (Agent2Agent) Protocol HTTP server support
axum = { version = "0.8", features = ["json", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[build-dependencies]
vtcode-config = { path = "../vtcode-config", version = "0.84.1" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[[example]]
name = "anstyle_test"
path = "examples/anstyle_test.rs"

[[example]]
name = "dialoguer_example"
path = "examples/dialoguer_example.rs"

[[example]]
name = "migration_test"
path = "examples/migration_test.rs"

[features]
default = []
schema = ["dep:schemars"]
a2a-server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-stream"]
anthropic-api = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-stream"]
desktop-notifications = ["dep:notify-rust"]

[package.metadata.cargo-machete]
ignored = ["dotenvy", "toml_edit"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert_fs = "1.1"
mockito = "1.7"
proptest = "1.5"
criterion = "0.8"
wiremock = "0.6.5"

[[bench]]
name = "tool_pipeline"
harness = false
